# i2c-analyzer

./: CMakeLists.txt  README.md
cmake/: ExternalAnalyzerSDK.cmake
src/: I2cAnalyzer.cpp  I2cAnalyzer.h  I2cAnalyzerResults.cpp  I2cAnalyzerResults.h  I2cAnalyzerSettings.cpp  I2cAnalyzerSettings.h  I2cSimulationDataGenerator.cpp  I2cSimulationDataGenerator.h
